<resources>
    <string name="app_name">SangSang</string>
    <string name="password">비밀번호</string>
    <string name="email">이메일</string>
    <string name="login">로그인</string>
    <string name="signout">로그아웃</string>
    <string name="userInfoUpdate">유저 정보 수정</string>
    <string name="update">수정하기</string>
    <string name="welcome">환영합니다.</string>
    <string name="hello">안녕하세요.</string>
    <string name="introduce">자기소개</string>
    <string name="changeImage">이미지 변경</string>
    <string name="comment">댓글</string>
    <string name="comment_editCreateTitle">댓글 작성</string>
    <string name="comment_button_text">댓글 업로드하기</string>
    <string name="preference_file_key">SangSangstargram</string>
    <string name="prefs_has_user_info">shownHomePage</string>
    <string name="email_is_not_valid">유효한 이메일이 아닙니다.</string>
    <string name="password_is_not_valid">유효한 비밀번호가 아닙니다.</string>
    <string name="delete_post">게시물 삭제</string>
    <string name="delete_message">게시물을 삭제하시겠습니까?</string>
    <string name="edit_post">게시물 수정</string>
    <string name="edit">수정</string>
    <string name="cancel">취소</string>
    <string name="delete">삭제</string>
    <string name="signUp">회원 가입</string>
    <string name="failed">실패!</string>
    <string name="empty">아무것도 없어!</string>
    <string name="post_edit">게시물 수정</string>
    <string name="post_editting">게시물 수정하기</string>
    <string name="name">이름</string>
    <string name="start">시작하기</string>
    <string name="loading">로딩중…</string>
    <string name="birth">생년월일</string>
    <string name="no_friend">친구가 없어 ㅠ</string>
    <string name="signUpDescription">혹시 회원이 아니신가요?</string>
    <string name="bookmark">북마크</string>
    <string name="chattingRoom">채팅방</string>
    <string name="write_post">게시글 작성</string>
    <string name="myPage">내 정보</string>
    <string name="postCreateButton">postCreateButton</string>
    <string name="postWriteContent">문구 입력...</string>
    <string name="post">게시물</string>
    <string name="following">팔로잉</string>
    <string name="follower">팔로워</string>
    <string name="follow">팔로우</string>
    <string name="unfollow">언팔로우</string>
    <string name="follow_cancel">Follow cancel</string>
    <string name="profile">Profile</string>
    <string name="count_0">0</string>
    <string name="UserID">UserID</string>
    <string name="text">text</string>
    <string name="likeCount">좋아요 %d개</string>
    <string name="post_deleted">게시물이 삭제되었습니다.</string>
    <string name="fail_to_connect">연결 실패!</string>
    <string name="retry">다시!</string>
    <string name="chage_profile">프로필을 변경하였습니다.</string>
    <string name="posting">게시물 업로드하기</string>

    <string-array name="image_options">
        <item>갤러리에서 선택</item>
        <item>기본 이미지로 변경</item>
    </string-array>

    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>